testdata/baselines/reference/submodule/compiler/declarationEmitPathMappingMonorepo.errors.txt
packages/b/tsconfig.json(5,9): error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
  Use '"paths": {"*": "./*"}' instead.


==== packages/b/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "outDir": "dist",
            "declaration": true,
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5102: Option 'baseUrl' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use '"paths": {"*": "./*"}' instead.
            "paths": {
                "@ts-bug/a": ["../a"]
            }
        }
    }
    
    
==== packages/b/src/index.ts (0 errors) ====
    import { a } from "@ts-bug/a";
    
    export function b(text: string) {
      return a(text);
    }
==== packages/a/index.d.ts (0 errors) ====
    declare module "@ts-bug/a" {
        export type AText = {
          value: string;
        };
        export function a(text: string): AText;
      }
      